package org.taranix.cafe.shell.annotations;

public enum CafeExecutionStrategy {
    ALWAYS_RUN,
    NON_OPTED_COMMAND_EXISTS
}
